# MoneyView

./: .gitignore  CHANGELOG.md  PRIVACY.md  README.md  TODO.md  pyproject.toml
app/: __init__.py  db.py  seeds.py  views.py
app/services/: __init__.py  categorization_service.py  constants.py  dashboard_service.py  import_service.py  pay_period_service.py  safe_to_spend_service.py
app/templates/: base.html  bills.html  budgets.html  dashboard.html  import.html  imports.html  review_queue.html  rules.html  transactions.html
db/schema/: 001_foundation.sql
docs/architecture/: generic-csv-import.md  import-profiles-spec.md  rules-engine-spec.md
scripts/: anonymize_csv.py  inspect_dashboard.py  validate_real_csv.py
tests/: conftest.py  test_dashboard_and_services.py  test_import_service.py  test_views_routes.py
tests/fixtures/: becu_may_june_sample.csv
