[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "moneyview"
version = "0.1.0"
description = "Local-first finance CSV dashboard"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0,<4.0",
  "pytest>=8.0,<9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]